# kvpress

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: new-press.md
.github/workflows/: python-publish.yml  style.yml  test.yml
evaluation/: README.md  __init__.py  evaluate.py
evaluation/infinite_bench/: README.md  calculate_metrics.py  create_huggingface_dataset.py
evaluation/loogle/: README.md  calculate_metrics.py  create_huggingface_dataset.py
evaluation/ruler/: README.md  calculate_metrics.py  create_huggingface_dataset.py  generate.sh
evaluation/zero_scrolls/: README.md  calculate_metrics.py  create_huggingface_dataset.py
kvpress/: __init__.py  per_layer_compression_wrapper.py  pipeline.py
kvpress/presses/: base_press.py  expected_attention_press.py  knorm_press.py  observed_attention_press.py  random_press.py  snapkv_press.py  streaming_llm_press.py
notebooks/: expected_attention.ipynb  new_press.ipynb  speed_and_memory.ipynb  wikipedia_demo.ipynb
tests/: fixtures.py  test_generate.py  test_per_layer_compression_wrapper.py  test_pipeline.py  test_press_call.py
tests/assets/: qa_dataset.csv
tests/presses/: test_observed_attention_press.py  test_presses.py
