[tool.poetry]
name = "kvpress"
authors = ["Simon Jegou", "Maximilian Jeblick", "Jiwei Liu", "David Austin"]
description = "Efficiently compress the KV cache of any pretrained transformer"
version = "0.0.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
numpy = "^2.0.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
bs4 = "^0.0.2"
torch = "^2.3.1"
transformers = "^4.45.1"
nvitop = "^1.3.2"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
datasets = "^2.21.0"
nltk = "^3.9.1"
fire = "^0.6.0"
pandas = "^2.2.2"
rouge = "^1.0.1"
bert-score = "^0.3.13"
accelerate = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
pytest-dependency = "^0.6.0"
pytest-html = ">=4.1.1, <5.0.0"
types-pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py310"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|venv|doc-venv|.svn|_build|buck-out|build|dist|notebooks|tools|tmp|bundles)"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|venv|doc-venv|.svn|_build|buck-out|build|dist|notebooks|tools|tmp|tests|bundles)"
